<resources>
    <!-- Global error text -->
    <string name="error_text_required_fields">
        Please fill this field, it is a required field
    </string>

    <!-- App and Fragment titles -->
    <string name="app_name">Vocab Helper</string>
    <string name="title_vocabulary">Vocabulary</string>
    <string name="title_quiz">Quiz Me</string>
    <string name="title_add_vocabulary">Add Vocabulary Item</string>

    <!-- Introduction Fragment -->
    <string name="intro_text">
        Please choose your native language, and the language you would like to learn:
    </string>
    <string name="intro_native_lang_label">Native Language*</string>
    <string name="intro_foreign_lang_label">Foreign Language*</string>
    <string name="intro_native_lang_helper_text">
        Required*. Please select your native or other language in which you are fluent
    </string>
    <string name="intro_foreign_lang_helper_text">
        Required*. Please select the foreign language you would like to learn
    </string>
    <string name="intro_button_text">Confirm</string>

    <string-array name="language_array">
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Spanish</item>
        <item>Italian</item>
        <item>Mandarin</item>
        <item>Irish</item>
        <item>Welsh</item>
        <item>Scottish</item>
    </string-array>

    <string name="intro_error_text_same_language">
        Please select languages that are unique. You have selected a native and foreign language
        that are the same.
    </string>
    <string name="intro_error_invalid_language">
        Please select a valid language from the dropdown
    </string>

    <!-- Vocabulary Fragments -->
    <!-- Main Vocabulary Fragment -->
    <string name="vocab_fab_desc">Add a vocabulary item</string>

    <!-- Add Vocabulary Item Fragment -->
    <string name="vocab_foreign_word_label">Foreign Word*</string>
    <string name="vocab_translation_label">Translation*</string>
    <string name="vocab_word_type_label">Word Type</string>
    <string name="vocab_definition_label">Definition</string>
    <string name="vocab_foreign_word_helper_text">Required*. Foreign word you want to learn</string>
    <string name="vocab_translation_helper_text">
        Required*. Translation of the foreign word in your native language
    </string>
    <string name="vocab_word_type_helper_text">
        The word type of the foreign word (e.g. noun, verb, etc.)
    </string>
    <string name="vocab_definition_helper_text">
        Meaning (definition) of this foreign word in your native language
    </string>
    <string name="vocab_add_button_text">Add</string>
    <string name="app_bar_action_settings">Settings</string>

</resources>